--- a/.github/workflows/test_export_tflite_cli_quantization.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization.yml
@@ -15,6 +15,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
+env:
+  TRANSFORMERS_IS_CI: true
+
 jobs:
   build:
     strategy:
@@ -51,4 +54,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest tests/exporters/tflite/test_exporters_tflite_cli.py -k "${{ matrix.quantization_schema }}" -s -vvvv --durations=0
+          pytest tests/exporters/tflite -m auto -k "${{ matrix.quantization_schema }}" -vvvv --durations=0
