--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -1,5 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Optimum CLI / Python - Test
 
 on:
@@ -41,4 +39,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest tests/cli -s -vvvv --durations=0
+          pytest tests/cli -n auto -vvvv --durations=0
