--- a/.github/workflows/test_fx_automatic_parallelism.yml
+++ b/.github/workflows/test_fx_automatic_parallelism.yml
@@ -1,11 +1,18 @@
 name: FX Automatic Parallelism on GPU / Python - Test
 
 on:
-  pull_request:
-    branches:
-      - main
-    paths:
-      - 'optimum/fx/parallelization/**.py'
+  workflow_dispatch:
+  # TODO: Uncomment when fixed
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'optimum/fx/parallelization/**.py'
+  # pull_request:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - 'optimum/fx/parallelization/**.py'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -36,7 +43,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Run nvidia-smi
         run: |
@@ -44,10 +51,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install -U pip
-          python3 -m pip install torch transformers
-          python3 -m pip install .[tests]
+          pip install -U pip
+          pip install .[tests]
 
       - name: Run automatic model parallelism tests
         run: |
-          pytest -s -v -o log_cli=true tests/fx/parallelization
+          pytest tests/fx/parallelization -s -v -o log_cli=true 
