--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9"]
+        python-version: [3.9]
         runs-on: [ubuntu-22.04]
 
     runs-on: ${{ matrix.runs-on }}
