--- a/.github/workflows/test_onnx.yml
+++ b/.github/workflows/test_onnx.yml
@@ -18,20 +18,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9']
-        os: [ubuntu-22.04, macos-14]
+        runs-on: [ubuntu-22.04]
+        python-version: [3.9]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runs-on }}
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
+        pip install --upgrade pip
+        pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
         pip install .[tests,exporters] diffusers
-    - name: Test with unittest
-      working-directory: tests
+  
+    - name: Test with pytest
       run: |
-        python -m unittest discover -s onnx -p 'test_*.py'
+        pytest tests/onnx -n auto -vvvv --duration=0
