--- a/.github/workflows/test_exporters_common.yml
+++ b/.github/workflows/test_exporters_common.yml
@@ -18,19 +18,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.11"]
+        runs-on: [ubuntu-22.04]
+        python-version: [3.9]
 
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.runs-on }}
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
-          pip install .[tests,exporters-tf]
-      - name: Test with unittest
-        working-directory: tests
+          pip install --upgrade pip
+          pip install --no-cache-dir torch==2.1.2 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          pip install .[tests,exporters,exporters-tf]
+
+      - name: Test with pytest
         run: |
-          pytest exporters/common/ -s --durations=0
+          pytest tests/exporters/common -n auto -vvvv --durations=0
