--- a/.github/workflows/test_export_onnx.yml
+++ b/.github/workflows/test_export_onnx.yml
@@ -32,12 +32,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies (pytorch)
+      - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,exporters] diffusers
 
-      - name: Test with pytest (pytorch)
+      - name: Test with pytest
         run: |
-          pytest tests/exporters/onnx/test_export.py -n auto -m "not tensorflow_test and not timm_test" -vvvv --durations=0
+          pytest tests/exporters/onnx/test_export.py -n auto -m "not timm_test" -vvvv --durations=0
