--- a/.github/workflows/test_onnxruntime_slow.yml
+++ b/.github/workflows/test_onnxruntime_slow.yml
@@ -2,8 +2,9 @@ name: ONNX Runtime Slow / Python - Test
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 0 7 * * * # every day at 7am UTC
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -18,6 +19,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
+env:
+  TRANSFORMERS_IS_CI: true
+
 jobs:
   build:
     if: ${{
@@ -27,17 +31,32 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'onnxruntime-slow')
       }}
 
-    runs-on:
-      group: aws-general-8-plus
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.9]
+        transformers-version: [latest]
+        runs-on: [ubuntu-22.04, windows-2022, macos-15]
+        include:
+          - transformers-version: "4.36.*"
+            runs-on: ubuntu-22.04
+          - transformers-version: "4.45.*"
+            runs-on: ubuntu-22.04
+
+    runs-on: ${{ matrix.runs-on }}
 
     steps:
+      - name: Free Disk Space (Ubuntu)
+        if: matrix.runs-on == 'ubuntu-22.04'
+        uses: jlumbroso/free-disk-space@main
+
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.9
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: "3.9"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
@@ -45,6 +64,14 @@ jobs:
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,onnxruntime] diffusers
 
+      - name: Install transformers ${{ matrix.transformers-version }}
+        if: ${{ matrix.transformers-version != 'latest' }}
+        run: |
+          pip install "transformers==${{ matrix.transformers-version }}" "diffusers<0.32.0"
+
       - name: Test with pytest
         run: |
-          RUN_SLOW=1 pytest tests/onnxruntime -m "run_slow" --durations=0 -vvvv
+          pytest tests/onnxruntime --durations=0 -vvvv
+        env:
+          RUN_SLOW: 1
+          HF_HUB_READ_TOKEN: ${{ secrets.HF_HUB_READ_TOKEN }}
