--- a/.github/workflows/test_offline.yml
+++ b/.github/workflows/test_offline.yml
@@ -18,9 +18,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9']
+        python-version: [3.9]
+        runs-on: [ubuntu-22.04]
 
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.runs-on }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
