--- a/.github/workflows/test_export_onnx.yml
+++ b/.github/workflows/test_export_onnx.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest tests/exporters/onnx/test_export.py -n auto -m "not timm_test" -vvvv --durations=0
+          pytest tests/exporters/onnx/test_export.py -vvvv --durations=0 -n auto
