--- a/.github/workflows/test_onnxruntime_slow.yml
+++ b/.github/workflows/test_onnxruntime_slow.yml
@@ -70,10 +70,15 @@ jobs:
           pip install .[tests,onnxruntime] diffusers
 
       - name: Install transformers ${{ matrix.transformers-version }}
-        if: ${{ matrix.transformers-version != 'latest' }}
+        if: ${{ matrix.transformers-version == '4.36.*' }}
         run: |
           pip install "transformers==${{ matrix.transformers-version }}" "diffusers<0.32.0"
 
+      - name: Install transformers ${{ matrix.transformers-version }}
+        if: ${{ matrix.transformers-version == '4.45.*' }}
+        run: |
+          pip install "transformers==${{ matrix.transformers-version }}" "diffusers<0.33.0"
+  
       - name: Test with pytest (in series)
         run: |
           pytest tests/onnxruntime -m "run_in_series" --durations=0 -vvvv
