--- a/.github/workflows/test_exporters_tflite_cli.yml
+++ b/.github/workflows/test_exporters_tflite_cli.yml
@@ -1,6 +1,7 @@
-name: Exporters TFLite / Python - Test
+name: Exporters TFLite CLI / Python - Test
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
   pull_request:
@@ -16,7 +17,11 @@ env:
 
 jobs:
   build:
-    if: ${{ (github.event_name == 'push') || contains( github.event.pull_request.labels.*.name, 'tflite' ) }}
+    if: ${{
+      (github.event_name == 'push') ||
+      (github.event_name == 'workflow_dispatch') ||
+      contains( github.event.pull_request.labels.*.name, 'tflite' )
+      }}
 
     strategy:
       fail-fast: false
@@ -53,4 +58,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest tests/exporters/tflite/test_export.py -n auto -k "${{ matrix.quantization_schema }}" -vvvv --durations=0
+          pytest tests/exporters/tflite/test_export_cli.py -k "${{ matrix.quantization_schema }}" -vvvv --durations=0 -n auto
