Clean up workflows (#2231)
* clean up unused workflows and group tflite workflows

* use runner group

* github runners

* fixes

* tes fx optimization and quantization

* add ci env var

* more cleanup

* trigger

* trigger

* fixes

* remove outdated torch ao quantization

* remove staging test

* fix

* fix

* more cleaning

* more cleanup

* no tensorflow onnx export

* test onnx

* more xdist auto

* remove dead code

* no tf onnx cli tests

* benchmarks never raaan

* onnx tensorflow conversion was never tested

* move multi platform multi version onnxruntime tests to slow

* style

* stable dropout

* first fixes of doctest

* fix decoder external data

* fix

* fix check_and_save_model once and for all

* tiddy up

* style

* fix

* one timm test

* use less timm models but at least make sure it's tested

* remove macos

* no dynamix axis is slow

* remove timm_test marker

* fix

* skip

* fix

* fix

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,4 @@
-name: Utils / Python - Test
+name: Code Quality
 
 on:
   push:
@@ -10,18 +10,16 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
-env:
-  TRANSFORMERS_IS_CI: true
-
 jobs:
   build:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-13, windows-2022]
-        python-version: ["3.9"]
+        python-version: [3.9]
+        runs-on: [ubuntu-22.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runs-on }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,8 +33,12 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests]
+          pip install .[quality]
 
-      - name: Tests needing datasets
+      - name: Check style with black
         run: |
-          pytest tests/utils -n auto -vvvv --durations=0
+          black --check .
+
+      - name: Check style with ruff
+        run: |
+          ruff .
