--- a/.github/workflows/test_common.yml
+++ b/.github/workflows/test_common.yml
@@ -1,4 +1,4 @@
-name: Utils / Python - Test
+name: Common / Python - Test
 
 on:
   push:
@@ -18,10 +18,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-13, windows-2022]
-        python-version: ["3.9"]
+        python-version: [3.9]
+        runs-on: [ubuntu-22.04, windows-2019, macos-13]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runs-on }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,6 +38,8 @@ jobs:
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests]
 
-      - name: Tests needing datasets
+      - name: Test with pytest
         run: |
-          pytest tests/utils -n auto -vvvv --durations=0
+          pytest tests/common -vvvv --durations=0
+        env:
+          HUGGINGFACE_CO_STAGING: ${{ matrix.python-version == '3.9' && matrix.runs-on == 'ubuntu-22.04' }}
