--- a/.github/workflows/test_bettertransformer.yml
+++ b/.github/workflows/test_bettertransformer.yml
@@ -19,35 +19,32 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.9]
-        os: [ubuntu-22.04]
+        runs-on: [ubuntu-22.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.runs-on }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies (stable pytorch)
         run: |
-          pip install .[tests]
-          pip install --no-cache-dir --upgrade torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install accelerate transformers==4.48.*
+          pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          pip install .[tests] transformers==4.48.*
 
-      - name: Test with stable pytorch
-        working-directory: tests
+      - name: Test with pytest (stable pytorch)
         run: |
-          pytest bettertransformer -s -vvvvv
+          pytest tests/bettertransformer -n auto -vvvvv
 
-      - name: Install dependencies 2
+      - name: Install dependencies (nightly pytorch)
         run: |
-          pip uninstall -y torch torchvision torchaudio
-          pip install --no-cache-dir --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cpu
+          pip install --pre --upgrade torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cpu
 
-      - name: Test with nightly pytorch
-        working-directory: tests
+      - name: Test with pytest (nightly pytorch)
         run: |
-          pytest bettertransformer -s -vvvvv
+          pytest tests/bettertransformer -n auto -vvvv
