--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -39,6 +39,10 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
 
     steps:
+      - name: Free Disk Space (Ubuntu)
+        if: ${{ matrix.runs-on == 'ubuntu-22.04' && matrix.test_file == 'test_modeling.py' }}
+        uses: jlumbroso/free-disk-space@main
+
       - name: Checkout code
         uses: actions/checkout@v4
 
