--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -27,6 +27,7 @@ jobs:
       matrix:
         python-version: [3.9]
         runs-on: [ubuntu-22.04]
+        transformers_version: [latest, 4.36.*, 4.45.*]
         test_file:
           [
             test_timm.py,
@@ -58,6 +59,16 @@ jobs:
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,onnxruntime] diffusers
+
+      - name: Install transformers ${{ matrix.transformers-version }}
+        run: |
+          if [ "${{ matrix.transformers_version }}" == '4.36.*' ]; then
+            pip install "transformers==${{ matrix.transformers-version }}" "diffusers<0.32.0"
+          elif [ "${{ matrix.transformers_version }}" == '4.45.*' ]; then
+            pip install "transformers==${{ matrix.transformers-version }}" "diffusers<0.33.0"
+          else
+            pip install transformers;
+          fi
 
       - name: Test with pytest (in series)
         if: matrix.test_file == 'test_modeling.py'
