--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -70,13 +70,16 @@ jobs:
             pip install transformers;
           fi
 
-      - name: Test with pytest (in series)
-        if: matrix.test_file == 'test_modeling.py'
-        run: |
-          pytest tests/onnxruntime/test_modeling.py -m "run_in_series" --durations=0 -vvvv
-
       - name: Test with pytest (in parallel)
+        if: matrix.test_file != 'test_diffusion.py'
         run: |
-          pytest tests/onnxruntime/${{ matrix.test_file }} -m "not run_in_series" --durations=0 -vvvv -n auto
+          pytest tests/onnxruntime/${{ matrix.test_file }} --durations=0 -vvvv -n auto
+        env:
+          HF_HUB_READ_TOKEN: ${{ secrets.HF_HUB_READ_TOKEN }}
+
+      - name: Test with pytest (in series)
+        if: matrix.test_file == 'test_diffusion.py'
+        run: |
+          pytest tests/onnxruntime/${{ matrix.test_file }} --durations=0 -vvvv
         env:
           HF_HUB_READ_TOKEN: ${{ secrets.HF_HUB_READ_TOKEN }}
