--- a/.github/workflows/test_onnxruntime_slow.yml
+++ b/.github/workflows/test_onnxruntime_slow.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Free Disk Space (Ubuntu)
         if: matrix.runs-on == 'ubuntu-22.04'
         uses: jlumbroso/free-disk-space@main
+        with:
+          swap-storage: false
 
       - name: Free Disk Space (macOS)
         if: matrix.runs-on == 'macos-15'
