--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9]
-        runs-on: [ubuntu-22.04, macos-13, windows-2022]
+        os: [ubuntu-22.04, macos-13, windows-2022]
+        python-version: ["3.9"]
 
     runs-on: ${{ matrix.runs-on }}
 
@@ -36,7 +36,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests,exporters-tf]
+          pip install .[tests,exporters]
 
       - name: Test with pytest
         run: |
