--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -89,9 +89,9 @@ jobs:
 
       - name: Make Optimum documentation
         run: |
-          sudo docker system prune -a -f
           cd optimum
-          make doc BUILD_DIR=optimum-doc-build VERSION=pr_$PR_NUMBER COMMIT_SHA_OPTIMUM=$COMMIT_SHA CLONE_URL=$PR_CLONE_URL
+          uv pip install . accelerate
+          make doc BUILD_DIR=optimum-doc-build VERSION=pr_$PR_NUMBER
           cd ..
 
       - name: Combine subpackage documentation
