--- a/.github/workflows/test_exporters_common.yml
+++ b/.github/workflows/test_exporters_common.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests,exporters]
+          pip install optimum-onnx@git+https://github.com/huggingface/optimum-onnx.git
+          pip install .[tests]
 
       - name: Test with pytest
         run: |
