--- a/.github/workflows/test_pipelines.yml
+++ b/.github/workflows/test_pipelines.yml
@@ -1,4 +1,4 @@
-name: Exporters Common / Python - Test
+name: Optimum Pipelines / Python - Test
 
 on:
   push:
@@ -11,6 +11,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  UV_SYSTEM_PYTHON: 1
+  UV_TORCH_BACKEND: auto
   TRANSFORMERS_IS_CI: true
 
 jobs:
@@ -18,8 +20,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-22.04]
         python-version: [3.9]
+        runs-on: [ubuntu-22.04]
 
     runs-on: ${{ matrix.runs-on }}
 
@@ -34,11 +36,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
-          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install optimum-onnx@git+https://github.com/huggingface/optimum-onnx.git
-          pip install .[tests]
+          pip install --upgrade pip uv
+          uv pip install --no-cache-dir optimum-onnx[onnxruntime]@git+https://github.com/huggingface/optimum-onnx.git
+          uv pip install --no-cache-dir .[tests]
 
       - name: Test with pytest
         run: |
-          pytest tests/exporters/common -vvvv --durations=0 -n auto
+          pytest tests/pipelines -vvvv --durations=0
